# JTKJ-PicoRTOS-Project

./: CMakeLists.txt  README.md  harjoitustyö(icm42670 muokattu).txt  main.c  sdk.c  sdk.h
examples/hello_hat/: CMakeLists.txt  main.c
examples/hello_microphone/tools/: play_stream_audio.sh  record_audio.sh
libs/TKJHAT/docs/: Doxyfile  overview.md
libs/TKJHAT/include/tkjhat/: pins.h  sdk.h
libs/TKJHAT/src/: sdk.c
libs/usb-serial-debug/include/usbSerialDebug/: helper.h
libs/usb-serial-debug/src/: helper.c  usb_descriptors.c
src/: main.c
